added inpur errors

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -123,6 +123,7 @@
         <input type="text" name="" id="amount">
         <button id="save-receipt">Add</button>
         <button id="cancel-receipt">Cancel</button>
+        <span id="add-receipt-error" style="display:none;"></span>
     </div>
     <button id="add-receipt">Add new receipt</button>
 </div>
